kuber/gitops/rethinkdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rethinkdb
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
