kuber/gitops/rethinkdb/rethinkdb-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rethinkdb-driver-access
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rethinkdb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: devicehub
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rethinkdb
      ports:
        - protocol: TCP
          port: 28015
